--- a/docker/development.env
+++ b/docker/development.env
@@ -1,6 +1,6 @@
 MYSQL_ALLOW_EMPTY_PASSWORD=1
 MYSQL_USER=filecluster
-MYSQL_DATABASE =filecluser
+MYSQL_DATABASE=filecluster
 MYSQL_PASSWORD=clusterfile
 MYSQL_HOST=filecluster-db
 SSH_HOST=filecluster1-ssh
